2013-09-16  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/plugin.php: Added tab support for the metaconsole.

2013-09-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql:
	Changed data type in field 'name' of 'tnetwork_component' table
	to TEXT/CLOB. 

2013-09-13  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/setup_netflow.php: Added a help tip to the
	  configuration token "Daemon interval".

	* include/functions_agents.php: Fixed an invalid call to
	  config_agents_has_remote_configuration. Remote configuration
	  files were not being deleted.

2013-09-12  Ramon Novoa  <rnovoa@artica.es>

	* godmode/snmpconsole/snmp_alert.php: Fixed pagination (was not working
	  well when a search filter was being used).

	* godmode/netflow/nf_edit_form.php: Force the ID of the table (the
	  javascript was broken).

2013-09-12  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_config.php: Removed some code that set
	  netflow_disable_custom_lvfilters to an invalid value.

2013-09-11  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor.php,
	  include/help/en/help_alert_config.php,
	  include/help/en/help_alert_macros.php,
	  include/help/en/help_module_macros.php,
	  include/help/es/help_module_macros.php,
	  include/help/es/help_alert_config.php,
	  include/help/es/help_alert_macros.php,
	  include/help/ja/help_alert_macros.php,
	  include/help/ja/help_module_macros.php,
	  include/help/ja/help_alert_config.php: Updated help for module macros.

2013-09-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/admin_access_logs.php: Fixed php error that breaks
	this view.

2013-09-09  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,